# ez-unifi

./: .env.example  .envrc  .pre-commit-config.yaml  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
ez-unifi/skills/ez-unifi/: SKILL.md
ez-unifi/skills/ez-unifi/scripts/: unifi.py
